# detect_advisor

./: .gitignore  Actionable.py  Configuration.py  LICENSE  README.md  Reqs.pages  TarExaminer.py  WizardLogger.py  config.py  data.py  detect_advisor.py  file_size_util.py  global_values.py  messages.py  output.py  process.py  pyproject.toml  requirements.txt  setup.py  try.py
detect_advisor/: config.py  global_values.py  main.py  messages.py  output.py  process.py
synopsys_detect_advisor.egg-info/: PKG-INFO  SOURCES.txt
